# metw-accounts-center

./: .env.example  Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
app/: Cargo.toml  all.html  fn.app.html  index.html  sidebar-items.js  struct.ApiDoc.html
app/middleware/: index.html  sidebar-items.js
app/middleware/auth/: fn.auth_email_verification_session.html  fn.auth_session.html  index.html  sidebar-items.js  struct.ApiDocAuthAddon.html  struct.GovernorAccountIdKeyExtractor.html
app/middleware/extract_real_ip/: fn.extract_real_ip.html  index.html  sidebar-items.js  struct.GovernorIpKeyExtractor.html
app/middleware/limiter/: fn.basic.html  index.html  sidebar-items.js
app/res/: enum.AppError.html  index.html  sidebar-items.js  struct.AppJson.html  type.AppMiddlewareResult.html  type.AppResult.html
app/routes/: index.html  sidebar-items.js
app/routes/authentication/: fn.routes.html  index.html  struct.ApiDoc.html
app/routes/authorization/: fn.routes.html  index.html  sidebar-items.js  struct.ApiDoc.html
app/routes/email_verification_session/: fn.routes.html  index.html  struct.ApiDoc.html
app/routes/session/: fn.routes.html  index.html  struct.ApiDoc.html
app/src/: lib.rs  main.rs  middleware.rs  res.rs
app/src/middleware/: auth.rs  extract_real_ip.rs  limiter.rs  mod.rs
app/src/routes/: authentication.rs  authorization.rs  email_verification_session.rs  mod.rs  session.rs
service/: Cargo.toml  all.html  fn.checked_now.html  index.html  sidebar-items.js  struct.AppState.html
service/client/: index.html  sidebar-items.js  trait.CaptchaClient.html  trait.EmailClient.html
service/client/mock/: index.html  sidebar-items.js  struct.MockCaptchaClientImpl.html  struct.MockEmailClientImpl.html  type.Emails.html
service/dto/: index.html  sidebar-items.js
service/dto/repo/: enum.EmailLimitingResult.html  index.html  sidebar-items.js  struct.Keys.html  struct.OwnedKeys.html  struct.OwnedLoginCredentials.html
service/dto/request/: index.html  sidebar-items.js  struct.Captcha.html  struct.Email.html  struct.Keys.html  struct.LoginWithEmail.html  struct.LoginWithUsername.html  struct.Signup.html  struct.Token.html
service/dto/response/: index.html  sidebar-items.js  struct.Account.html  struct.Keys.html  struct.Token.html
service/dto/service/: index.html  sidebar-items.js  struct.Login.html
service/email_templates/: emails.toml  template.html  template.txt
service/entity/: index.html  sidebar-items.js  struct.Account.html  struct.AccountFlags.html  struct.Email.html  struct.Username.html
service/handlers/: enum.HandlerError.html  index.html  sidebar-items.js  struct.AuthenticationHandler.html  struct.AuthorizationHandler.html  struct.EmailVerificationSessionHandler.html  struct.SessionHandler.html  type.HandlerResult.html
service/handlers/authentication/: struct.AuthenticationHandler.html
service/handlers/authorization/: struct.AuthorizationHandler.html
service/handlers/email_verification_session/: struct.EmailVerificationSessionHandler.html
service/handlers/error/: enum.HandlerError.html
service/handlers/session/: struct.SessionHandler.html
service/repo/: enum.RepoError.html  index.html  sidebar-items.js  trait.AccountRepo.html  trait.AccountRepoTransaction.html  trait.EmailLimitingRepo.html  trait.TokenRepo.html  type.RepoResult.html
service/repo/error/: enum.RepoError.html
service/repo/mock/: index.html  sidebar-items.js  struct.MockAccountRepoImpl.html  (+2 more)
service/service/: enum.ServiceError.html  index.html  sidebar-items.js  struct.AccountService.html  struct.EmailLimitingService.html  struct.TokenService.html  type.ServiceResult.html
service/src/: entity.rs  lib.rs  state.rs  testutil.rs
service/state/: struct.AppState.html
service/testutil/: fn.random_email.html  fn.random_ipv6.html  fn.random_username.html  index.html  sidebar-items.js
service/util/: index.html  sidebar-items.js  struct.JsonWebSignature.html
state/: .env.example  Cargo.toml  README.md  all.html  build.rs  index.html  sidebar-items.js  struct.AccountRepoImpl.html  struct.AwsEmailClientImpl.html  struct.CaptchaClientImpl.html  struct.Config.html  struct.EmailClientImpl.html  struct.EmailLimitingRepoImpl.html  struct.LettreEmailClientImpl.html  struct.TokenRepoImpl.html
state/account_repo/: struct.AccountRepoImpl.html
state/aws_email_client/: struct.AwsEmailClientImpl.html
state/captcha_client/: struct.CaptchaClientImpl.html
state/email_client/: struct.EmailClientImpl.html
state/email_limiting_repo/: fn.to_block_email_key.html  fn.to_block_ip_key.html  fn.to_used_email_quota_key.html  fn.to_used_ip_quota_key.html  struct.EmailLimitingRepoImpl.html
state/examples/: amazon-sesv2.rs  email-client-aws.rs  email-client-lettre.rs
state/lettre_email_client/: struct.LettreEmailClientImpl.html
state/migrations/: 0001_init.sql
state/redis_keys/: index.html  sidebar-items.js
state/src/: account_repo.rs  aws_email_client.rs  captcha_client.rs  email_client.rs  email_limiting_repo.rs  lettre_email_client.rs  lib.rs  mail_client.rs  token_repo.rs
state/token_repo/: fn.to_account_key.html  fn.to_scope_key.html  fn.to_token_key.html  struct.TokenRepoImpl.html
tests/: Cargo.toml  all.html  index.html  sidebar-items.js
tests/account_service/: fn.account_creation.html  fn.account_creation_data_race.html  fn.email_change.html  index.html  sidebar-items.js
tests/email_limiting_repo/: fn.email_limiting.html  index.html  sidebar-items.js
tests/handlers/: fn.change_primary_email.html  fn.logout.html  fn.retry_signup.html  fn.signup_and_login.html  fn.taken_username_or_email.html  index.html  sidebar-items.js
tests/src/: account_service.rs  email_limiting_repo.rs  handlers.rs  lib.rs  token_repo.rs
tests/token_repo/: fn.account_token_revocation.html  fn.check_and_revoke.html  fn.token_revocation_data_race.html  index.html  sidebar-items.js
tests/util/: fn.pg_pool_from_env.html  fn.redis_client_from_env.html  fn.redis_con_generator_from_env.html  index.html  sidebar-items.js  struct.TestState.html
(+676 files in other folders)
