[package]
name = "metw-accounts-center"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
async-trait = "0.1"

sqlx = { version = "0.8", features = ["postgres", "chrono"]}
chrono = "0.4"

biscuit = "0.8"
argon2 = "0.5"

tracing = "0.1"

pastey = "0.2"
dotenvy = "0.15"
thiserror = "2"

validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.4"
test-log = { version = "0.2", features = ["trace"] }
futures-util = "0.3"
