[workspace]
resolver = "3"
members = ["_docs", "service", "state"]

[workspace.dependencies]
# async runtime&utility
tokio = "1"
async-trait = "0.1"

# repository
sqlx = "0.8"
chrono = "0.4"

# observability
tracing = "0.1"
tracing-subscriber = "0.3"

# utility macros
pastey = "0.2"
dotenvy = "0.15"
thiserror = "2"

# field verification
validator = "0.20"
regex = "1.12"

serde = "1"

# [dev-dependencies]
serial_test = "3.4"
test-log = "0.2"
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
