[workspace]
resolver = "3"
members = ["_docs", "app", "service", "state", "tests"]

[workspace.dependencies]
# async runtime&utility
tokio = "1"
tower-http = "0.7"
async-trait = "0.1"
axum = "0.8"

utoipa = "5.5"

# repository
sqlx = "0.8"
chrono = "0.4"
redis = "1"

# observability
tracing = "0.1"
tracing-subscriber = "0.3"

# utility macros
pastey = "0.2"
thiserror = "2"

dotenvy = "0.15"
envy = "0.4"

# field verification
validator = "0.20"
regex = "1.12"

serde = "1"
serde_with = "3.2"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
aws-sdk-sesv2 = "1.123.0"

# [dev-dependencies]
serial_test = "3.4"
test-log = "0.2"
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
