[package]
name = "state"
version = "0.0.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }

sqlx = { workspace = true, features = ["postgres", "chrono", "macros", "runtime-tokio"] }
redis = { workspace = true, features = ["aio", "tokio-comp"] }

tracing = { workspace = true }

dotenvy = { workspace = true }

service = { path = "../service/" }

# Client-specific utilities
cf-turnstile = { version = "0.2.0", features = ["native-tls"], default-features = false }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.123.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

service = { path = "../service/", features = ["mock", "testutil"] }

[lints]
workspace = true
