[package]
name = "state"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }

sqlx = { workspace = true, features = ["postgres", "macros"] }
chrono = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }

tracing = { workspace = true }

dotenvy = { workspace = true }

service = { path = "../service/" }

serde = { workspace = true, features = ["derive"] }
envy = { workspace = true }

# Client-specific utilities
cf-turnstile = { version = "0.2.0", features = ["native-tls"], default-features = false }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
aws-sdk-sesv2 = "1.123.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

test-log = { workspace = true, features = ["trace"] }
serial_test = { workspace = true }

tracing-subscriber = { workspace = true, features = ["fmt"] }

service = { path = "../service/", features = ["testutil"] }
tests = { path = "../tests/" }

[features]
testutil = []

[lints]
workspace = true
